<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_qlty_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_qlty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_now_qlty"
                app:layout_constraintLeft_toRightOf="@id/air_now_qlty_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_qlty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_qlty_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_qlty_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_main_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_main_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_now_main"
                app:layout_constraintLeft_toRightOf="@id/air_now_main_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_main_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_main_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_aqi_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_aqi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_now_aqi"
                app:layout_constraintLeft_toRightOf="@id/air_now_aqi_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_aqi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_aqi_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_aqi_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_pm25_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_pm25_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_now_pm25"
                app:layout_constraintLeft_toRightOf="@id/air_now_pm25_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_pm25_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_pm25_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_pm25_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_pres_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_pres_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_now_pres"
                app:layout_constraintLeft_toRightOf="@id/air_now_pres_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_pres_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_pres_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_pres_label" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_wind_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_wind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_now_wind_dir"
                app:layout_constraintLeft_toRightOf="@id/air_now_wind_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_wind_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_wind_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_fl_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_fl_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_now_fl"
                app:layout_constraintLeft_toRightOf="@id/air_now_fl_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_fl_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_fl_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_fl_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_hum_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_hum_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_now_hum"
                app:layout_constraintLeft_toRightOf="@id/air_now_hum_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_hum_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_hum_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_hum_label" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/air_now_vis_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/air_now_vis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_now_vis"
                app:layout_constraintLeft_toRightOf="@id/air_now_vis_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/air_now_vis_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/air_now_vis_img"
                app:layout_constraintTop_toBottomOf="@id/air_now_vis_label" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</LinearLayout>
